[tool.poetry]
name = "moe-counter-remade"
version = "1.0.0"
description = "Cute visit counter with themes. (Remade of https://github.com/journey-ad/Moe-counter/)"
authors = ["MJaroslav <rcr3211@gmail.com>"]
license = "WTFPL"
repository = "https://github.com/MJaroslav/moe-counter-remade"

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "0.17.0"
anyio = "3.5.0"
asgiref = "3.5.1"
click = "8.1.3"
colorama = "0.4.4"
fastapi = "0.77.1"
greenlet = "1.1.2"
h11 = "0.13.0"
idna = "3.3"
pydantic = "1.9.0"
python-magic = "0.4.25"
sniffio = "1.2.0"
SQLAlchemy = "1.4.36"
starlette = "0.19.1"
typing-extensions = "4.2.0"
uvicorn = "0.17.6"
yattag = "1.14.0"
Pillow = "^10.1.0"

